# rust-ferrite

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  STATUS.md  build-android.sh  dev.sh
.cargo/: config.toml
.github/workflows/: release.yml
android-app/: build.gradle.kts  settings.gradle.kts
android-app/app/: build.gradle.kts
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/java/com/ferrite/: AoaEchoActivity.kt  AoaProtoActivity.kt  FerriteLib.kt  MainActivity.kt
android-app/app/src/main/res/xml/: accessory_echo_filter.xml  accessory_filter.xml  accessory_proto_filter.xml
android-jni/: Cargo.toml  build.rs
android-jni/src/: lib.rs
aoa-proto-test/: Cargo.toml
aoa-proto-test/src/: main.rs
aoa-test/: Cargo.toml
aoa-test/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs
host/: Cargo.toml
host/src/: aoa.rs  capture.rs  h264_dump.rs  h264_stream.rs  input.rs  main.rs  virtual_display.rs
packaging/: 51-ferrite-aoa.rules  ferrite-tray.desktop  install.sh
packaging/debian/: ferrite-tray.service  postinst  prerm
packaging/systemd/: ferrite-evdi-add.service  ferrite-tray.service
tray/: Cargo.toml
tray/src/: main.rs
ui/: Cargo.toml
ui/src/: main.rs
