[package]
name = "ferrite-host"
version = "0.1.0"
edition = "2021"

[dependencies]
ferrite-core = { path = "../core" }
tokio = { version = "1", features = ["full"] }
bincode = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ashpd = { version = "0.13", default-features = false, features = ["tokio", "screencast"] }
pipewire = "0.9"
libc = "0.2"
