[package]
name = "ferrite-ui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ferrite-ui"
path = "src/main.rs"

[dependencies]
ferrite-core = { path = "../core" }
serde_json = "1"
anyhow = "1"
local-ip-address = "0.6"
qrcode = { version = "0.14", default-features = false, features = ["image"] }
image = { version = "0.25", default-features = false, features = ["png"] }
ron = "0.8"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["process", "sync", "macros", "rt", "time"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic"
branch = "master"
default-features = false
features = ["tokio", "wayland", "winit", "wgpu", "desktop"]
